fix whitespace.

--- a/assets/scss/components/_main.scss
+++ b/assets/scss/components/_main.scss
@@ -153,8 +153,8 @@ $main-blockquote-font-family: 'Satoshi-Bold';
   font-family: 'Satoshi-Bold';
   color: black;
   font-size: .85rem;
-  padding: 0;
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 @media #{$breakpoints-medium} {
