--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1098,8 +1098,8 @@ header {
   font-family: "Satoshi-Bold";
   color: black;
   font-size: 0.85rem;
-  padding: 0;
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 @media only screen and (min-width: 768px) {
